--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -388,31 +388,36 @@ yellow
   {% set frac_dark = stats.dark/stats.total %}
   {% set frac_none = stats.none/stats.total %}
 
-  <table class="ui very basic very compact collapsing table" style="font-weight: bold; margin-left: 1em;">
+  <table class="ui basic very compact collapsing table" style="margin-left: 1em;">
     <tbody>
       <tr>
         <td style="background-color: #21ba45;">
-        <td class="right aligned" >{{ "{:,}".format(stats.bright) }}
+        <td class="right aligned" style="font-weight: bold;">{{ "{:,}".format(stats.bright) }}
         <td class="right aligned" >{{ (frac_bright*100)|round(2,method='ceil') }}%
         <td>preserved and publicly accessible (bright)
       <tr>
         <td style="background-color: darkgreen;">
-        <td class="right aligned" >{{ "{:,}".format(stats.dark) }}
+        <td class="right aligned" style="font-weight: bold;">{{ "{:,}".format(stats.dark) }}
         <td class="right aligned" >{{ (frac_dark*100)|round(2,method='ceil') }}%
         <td>preserved but not publicly accessible (dark)
       {% if stats.shadows_only %}
       {% set frac_shadows_only = stats.shadows_only/stats.total %}
       <tr>
         <td style="background-color: darkred;">
-        <td class="right aligned" >{{ "{:,}".format(stats.shadows_only) }}
+        <td class="right aligned" style="font-weight: bold;">{{ "{:,}".format(stats.shadows_only) }}
         <td class="right aligned" >{{ (frac_shadows_only*100)|round(2,method='ceil') }}%
         <td>only independently preserved in "shadow" libraries
       {% endif %}
       <tr>
         <td style="background-color: #db2828;">
-        <td class="right aligned" >{{ "{:,}".format(stats.none) }}
+        <td class="right aligned" style="font-weight: bold;">{{ "{:,}".format(stats.none) }}
         <td class="right aligned" >{{ (frac_none*100)|round(2,method='ceil') }}%
         <td>no known independent preservation
+      <tr>
+        <td style="background-color: grey;">
+        <td class="right aligned" style="font-weight: bold;">{{ "{:,}".format(stats.total) }}
+        <td class="right aligned" >
+        <td>total
     </tbody>
   </table>
 
