--- a/python/fatcat_web/templates/container_edit.html
+++ b/python/fatcat_web/templates/container_edit.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 {% block edit_form_prefix %}
-{{ edit_macros.edit_link_bar('container', existing_ident, 'form') }}
+{{ edit_macros.edit_link_bar('container', existing_ident, editgroup, 'form') }}
 <div class="ui segment">
 <h1 class="ui header">Edit Container Entity</h1>
 
