--- a/python/fatcat_web/templates/entity_delete.html
+++ b/python/fatcat_web/templates/entity_delete.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-{{ edit_macros.edit_link_bar(entity_type, existing_ident, 'delete') }}
+{{ edit_macros.edit_link_bar(entity_type, existing_ident, editgroup, 'delete') }}
 
 {% block edit_form_prefix %}
   <div class="ui segment">
