--- a/python/fatcat_web/templates/entity_edit_toml.html
+++ b/python/fatcat_web/templates/entity_edit_toml.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 {% block edit_form_prefix %}
-  {{ edit_macros.edit_link_bar(entity_type, existing_ident, 'toml') }}
+  {{ edit_macros.edit_link_bar(entity_type, existing_ident, editgroup, 'toml') }}
   <div class="ui segment">
   <h1 class="ui header">Edit Entity</h1>
 
