--- a/python/fatcat_web/templates/fileset_view.html
+++ b/python/fatcat_web/templates/fileset_view.html
@@ -49,7 +49,7 @@ No known public URL, mirror, or archive for this File Set.
 
 <h3>File Manifest ({{ fileset.manifest|count }})</h3>
 {% if fileset.manifest %}
-<table class="ui compact single line table">
+<table class="ui compact table" style="z-index: 10;">
   <thead>
     <tr>
       <th class="collapsing"></th>
